--- a/src/main/webapp/i18n/ar-ly/global.json
+++ b/src/main/webapp/i18n/ar-ly/global.json
@@ -7,13 +7,18 @@
             "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
             "entities": {
                 "main": "الكيانات",
+                "user": "المترشح",
+                "investorMenu": "المستثمر",
+                "investorHome": "الصفحة الخاصة",
+                "userHome": "الصفحة الخاصة",
+                "teamInvitationInbox": "الدعوات الواردة",
                 "parameter": "Parameter",
                 "team": "الفريق",
                 "teamMember": "أعضاء الفريق",
                 "investor": "المستثمرون",
                 "projectFile": "ملفات",
                 "projectEvent": "أحداث",
-                "teamInvitation": "دعوات",
+                "teamInvitation": "إرسال الدعوات",
                 "project": "المشاريع",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
