--- a/src/main/webapp/i18n/ar-ly/teamInvitation.json
+++ b/src/main/webapp/i18n/ar-ly/teamInvitation.json
@@ -21,6 +21,8 @@
             "date": "التاريخ",
             "sender": "المرسل",
             "receiver": "المرسل إليه",
+            "error": "عذرا",
+            "errorMessage": "إسم المستخدم الذي أدخلت غير مسجل عندنا. رجاءا تأكد من الإسم",
             "team": "الفريق"
         }
     }
