--- a/src/main/webapp/i18n/ar-ly/team.json
+++ b/src/main/webapp/i18n/ar-ly/team.json
@@ -22,7 +22,8 @@
             "name": "إسم الفريق",
             "creationDate": "تاريخ الانشاء",
             "shortDescription": "تعريف مقتضب",
-            "description": "تعريف مفصل"
+            "description": "تعريف مفصل",
+            "owner": "المدير"
         }
     }
 }
