--- a/src/main/webapp/i18n/fr/team.json
+++ b/src/main/webapp/i18n/fr/team.json
@@ -19,7 +19,8 @@
             "name": "Name",
             "creationDate": "Creation Date",
             "shortDescription": "Short Description",
-            "description": "Description"
+            "description": "Description",
+            "owner" : "Créateur"
         }
     }
 }
