--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -20,6 +20,7 @@
                 "projectFile": "Fichier",
                 "projectEvent": "Evenement",
                 "project": "Projet",
+                "team": "Team",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
